{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 14,
  "lineage": "d30cb468-ad9a-5791-dac1-c1477d42882c",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-001",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-068b28617ce1a66e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068b28617ce1a66e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fec32fc459370e46",
            "private_dns": "ip-10-0-1-175.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_ip": "18.143.92.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8d81f9b516e121f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-004afee9f11959d17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0029455e292c5c96e",
            "tags": {
              "Name": "default-ec2-subnet-0029455e292c5c96e"
            },
            "tags_all": {
              "Name": "default-ec2-subnet-0029455e292c5c96e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004afee9f11959d17"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "ec2-002",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-01924a29c14a8039e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01924a29c14a8039e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8d73ef34542699a",
            "private_dns": "ip-10-0-8-198.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.198",
            "public_ip": "54.255.136.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06aa55a8678d5c0b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-004afee9f11959d17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a90d7cd2b6533266",
            "tags": {
              "Name": "default-ec2-subnet-0a90d7cd2b6533266"
            },
            "tags_all": {
              "Name": "default-ec2-subnet-0a90d7cd2b6533266"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004afee9f11959d17"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "ec2-003",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-03c3222e851aab2f9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c3222e851aab2f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ef459e3188dae0b",
            "private_dns": "ip-10-0-12-217.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.217",
            "public_ip": "13.214.160.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc2123cfa5af6810",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-004afee9f11959d17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0808052bc6065bf46",
            "tags": {
              "Name": "default-ec2-subnet-0808052bc6065bf46"
            },
            "tags_all": {
              "Name": "default-ec2-subnet-0808052bc6065bf46"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004afee9f11959d17"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:security-group/sg-004afee9f11959d17",
            "description": "SG for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004afee9f11959d17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "074520742851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-sg"
            },
            "tags_all": {
              "Name": "default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:internet-gateway/igw-0726865b9337fc6ed",
            "id": "igw-0726865b9337fc6ed",
            "owner_id": "074520742851",
            "tags": {
              "Name": "default-vpc-pub-igw"
            },
            "tags_all": {
              "Name": "default-vpc-pub-igw"
            },
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:route-table/rtb-0a0c01090aca8b2de",
            "id": "rtb-0a0c01090aca8b2de",
            "owner_id": "074520742851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0726865b9337fc6ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "default-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pbsnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7a477de9d22da7",
            "route_table_id": "rtb-0a0c01090aca8b2de",
            "subnet_id": "subnet-0029455e292c5c96e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014c5c3cba92cc692",
            "route_table_id": "rtb-0a0c01090aca8b2de",
            "subnet_id": "subnet-0a90d7cd2b6533266"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a159f886d572420d",
            "route_table_id": "rtb-0a0c01090aca8b2de",
            "subnet_id": "subnet-0808052bc6065bf46"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-0029455e292c5c96e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0029455e292c5c96e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "default-pub-snet-ap-southeast-1a"
            },
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-0a90d7cd2b6533266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90d7cd2b6533266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "default-pub-snet-ap-southeast-1b"
            },
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-0808052bc6065bf46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0808052bc6065bf46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snet-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "default-pub-snet-ap-southeast-1c"
            },
            "vpc_id": "vpc-06d76417c92b962d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:vpc/vpc-06d76417c92b962d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0a1cbe0b1b298882f",
            "default_route_table_id": "rtb-0363453f13dc87282",
            "default_security_group_id": "sg-0711f0e7e42126d68",
            "dhcp_options_id": "dopt-0d858b58eafdb01c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d76417c92b962d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0363453f13dc87282",
            "owner_id": "074520742851",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    }
  ]
}